--- a/aula_javascript_estacio/aula4.html
+++ b/aula_javascript_estacio/aula4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> <html>
     <head> 
     <meta charset="UTF-8">
-    <title> Título da minha parima  </title>
+    <title> Título da minha primeira pagina  </title>
     <style>
         p {
             color: blue;
